# su2-3d-lgt-metropolis

./: .gitignore  .zenodo.json  CITATION.cff  README.md  refit_ranges.py  requirements.txt
cpp/: CMakeLists.txt
cpp/src/: lattice.hpp  main.cpp  main_larger_loops.cpp  main_scaling_smear.cpp  main_volume_check_beta5.cpp  main_volume_check_beta55.cpp  observables.hpp  rng.hpp  smearing.hpp  su2.hpp  update_metropolis.hpp
python/: analyze_larger_loops.py  analyze_plaquette.py  analyze_scaling_smear.py  analyze_wilson_loops.py  beta_scan_errors.py  beta_scan_summary.py  blocking_analysis.py  compare_starts.py  continuum_fit_current.py  effective_potential.py  effective_potential_errors.py  fit_systematics.py  make_veff_beta60.py  make_veff_beta65.py  plateau_and_scaling_fit.py  plateau_extraction.py  plot_sigma_scaling_final.py  plot_sigma_vs_L.py  separate_cold_hot_analysis.py  shifted_plateau_sensitivity.py  string_tension_fit.py  volume_scan_summary.py  volumecheck_beta55_fit.py  volumecheck_beta5_fit.py
runs/: beta55_volumecheck_fit_summary.csv  beta5_volumecheck_fit_summary.csv  scaling_fit_summary.csv  shifted_window_sensitivity_summary.csv
runs/L4_beta_4p0/: plaquette.csv
runs/L4_beta_5p0/: plaquette.csv  wilson_loops.csv
runs/L6_beta_4p0/: plaquette.csv  wilson_loops.csv
runs/L6_beta_5p0/: plaquette.csv  wilson_loops.csv
runs/beta_3p0/: plaquette.csv  wilson_loops.csv
runs/beta_3p5/: plaquette.csv  wilson_loops.csv
runs/beta_4p0/: plaquette.csv  wilson_loops.csv
runs/beta_4p5/: plaquette.csv  wilson_loops.csv
runs/beta_5p0/: plaquette.csv  (+1 more)
(+64 files in other folders)
